--- a/game/src/main/AndroidManifest.xml
+++ b/game/src/main/AndroidManifest.xml
@@ -5,7 +5,23 @@
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
 >
-
+            <activity android:allowTaskReparenting="true"
+            android:alwaysRetainTaskState="true"
+            android:clearTaskOnLaunch="true"
+            android:enabled="true"
+            android:hardwareAccelerated="true"
+            android:label="BattleBirds"
+            android:launchMode="singleInstance"
+            android:multiprocess="true"
+            android:name=".GameActivity"
+            android:screenOrientation="portrait"
+            android:uiOptions="none"
+            android:windowSoftInputMode="stateAlwaysVisible">
+                <intent-filter >
+                    <action android:name="android.intent.action.MAIN" />
+                    <category android:name="android.intent.category.LAUNCHER" />
+                </intent-filter>
+        </activity>
     </application>
 
 </manifest>
