--- a/game/src/main/AndroidManifest.xml
+++ b/game/src/main/AndroidManifest.xml
@@ -5,7 +5,26 @@
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
 >
-            <activity android:allowTaskReparenting="true"
+
+        <activity android:allowTaskReparenting="true"
+            android:alwaysRetainTaskState="true"
+            android:clearTaskOnLaunch="true"
+            android:enabled="true"
+            android:hardwareAccelerated="true"
+            android:label="BattleBirds"
+            android:launchMode="singleInstance"
+            android:multiprocess="true"
+            android:name=".MenuActivity"
+            android:screenOrientation="portrait"
+            android:uiOptions="none"
+            android:windowSoftInputMode="stateAlwaysVisible">
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity android:allowTaskReparenting="true"
             android:alwaysRetainTaskState="true"
             android:clearTaskOnLaunch="true"
             android:enabled="true"
@@ -17,10 +36,6 @@
             android:screenOrientation="portrait"
             android:uiOptions="none"
             android:windowSoftInputMode="stateAlwaysVisible">
-                <intent-filter >
-                    <action android:name="android.intent.action.MAIN" />
-                    <category android:name="android.intent.category.LAUNCHER" />
-                </intent-filter>
         </activity>
     </application>
 
