--- a/engine/src/main/AndroidManifest.xml
+++ b/engine/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
             android:label="BattleBirds"
             android:launchMode="singleInstance"
             android:multiprocess="true"
-            android:name="com.wow.battlebirds.engine.GameActivity"
+            android:name="com.wow.battlebirds.engine.BaseActivity"
             android:screenOrientation="landscape"
             android:uiOptions="none"
             android:parentActivityName="com.wow.battlebirds.engine.MenuActivity">
